# Ditto-Synthetic-Matchmaking-Feedback-Loop-Simulator

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  temp_requirement.txt
.tmb/: tmb.db  tmb.db-shm  tmb.db-wal
.tmb/config/: project.yaml
.tmb/prompts/: executor.md  planner.md
.tmb/skills/: ditto-conversation-termination.md  ditto-graph-routing.md  ditto-project-architecture.md  jsonl-io-patterns.md  langchain-ollama-integration.md  langgraph-stategraph.md  llm-json-repair.md  matcher-fallback-pattern.md  ollama-embedding-fallback.md  ollama-model-management.md  ollama-raw-client-structured-output.md  pydantic-v2-patterns.md  pytest-unit-testing.md  python-uv-dependency-management.md  streamlit-session-state.md
Archived/Claude_Agents/: agent.py  system_engineer.ipynb
Gemini_Agents/: SDE_Prompt.md  gemini_agent.py  prompt_agent.ipynb
bro/: BLUEPRINT.md  DISCUSSION.md  EVOLUTION.md  EXECUTION.md  FLOWCHART.md  GOALS.md
doc/: Interactive_UI_Roadmap.md  Synthetic_Conversation_Generator_Project_Roadmap.md  Walkthrough  implementation_plan.md.resolved
pages/: 1_👤_Persona_Studio.py  2_💬_Simulation_Arena.py  3_📊_Analytics.py
src/: __init__.py  config.py
src/ai_match_bot/: __init__.py  agent.py  graph.py  matcher.py  nodes.py  prompts.py
src/customer_bot/: __init__.py  agent.py  prompts.py
src/ditto_bot/: __init__.py  agent.py  graph.py  matcher.py  nodes.py  prompts.py
tests/: test_json_repair.py  test_langgraph_integration.py  test_matcher.py  test_models.py  test_mongo.py  test_orchestrator.py  test_persona_generator.py
(+12 files in other folders)
