[project]
name = "Ditto-Synthetic-Matchmaking-Feedback-Loop-Simulator"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "tmb",
    "langgraph",
    "langchain-core",
    "langchain-ollama",
    "google-genai>=1.64.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "ollama>=0.4.0",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "pymongo>=4.6.0",
]

[tool.uv]
package = false
environments = ["sys_platform != 'win32'"]
override-dependencies = [
    "pandas>=3.0.1",
]

[tool.uv.sources]
tmb = { path = "./TMB", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "mongomock>=4.1.0",
]
